--- a/index.html
+++ b/index.html
@@ -4,17 +4,88 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bhavya Kushwaha</title>
+
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      background: #0f172a;
+      color: #e5e7eb;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 60px 20px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    .subtitle {
+      font-size: 1.1rem;
+      color: #cbd5f5;
+      margin-bottom: 6px;
+    }
+
+    .location {
+      color: #94a3b8;
+      margin-bottom: 40px;
+    }
+
+    h2 {
+      margin-top: 40px;
+      font-size: 1.6rem;
+      border-bottom: 2px solid #22c55e;
+      display: inline-block;
+      padding-bottom: 6px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin-top: 20px;
+    }
+
+    li {
+      margin-bottom: 12px;
+    }
+
+    a {
+      color: #22c55e;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      margin-top: 80px;
+      color: #64748b;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>👋 Hi, I'm Bhavya Kushwaha</h1>
-  <p>B.Tech CSE (Cloud Computing) Student @ VIT Bhopal</p>
-  <p>📍 Noida, India</p>
+  <div class="container">
+    <h1>👋 Hi, I'm Bhavya Kushwaha</h1>
+    <div class="subtitle">B.Tech CSE (Cloud Computing) Student @ VIT Bhopal</div>
+    <div class="location">📍 Noida, India</div>
 
-  <h2>🔗 Connect with Me</h2>
-  <ul>
-    <li><a href="mailto:bhavyakushwaha.work@gmail.com">Email</a></li>
-    <li><a href="https://www.linkedin.com/in/bhavya-kushwaha-4855283a5/" target="_blank">LinkedIn</a></li>
-    <li><a href="https://github.com/kushwahabhavya" target="_blank">GitHub</a></li>
-  </ul>
+    <h2>🔗 Connect with Me</h2>
+    <ul>
+      <li>📧 <a href="mailto:bhavyakushwaha.work@gmail.com">Email</a></li>
+      <li>💼 <a href="https://www.linkedin.com/in/bhavya-kushwaha-4855283a5/" target="_blank">LinkedIn</a></li>
+      <li>🐙 <a href="https://github.com/kushwahabhavya" target="_blank">GitHub</a></li>
+    </ul>
+
+    <footer>
+      © 2026 Bhavya Kushwaha
+    </footer>
+  </div>
 </body>
 </html>
